# V2DL5-Binary-Analysis

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: citation-validation.yml  flake8.yml  linter.yml  pypi.yml  unittests.yml
docs/changes/: 53.maintenance.md
eventdisplay_anasum/: light_curve_analysis.C  light_curve_analysis.sh  nightly_time_bins.C  nightly_time_bins.sh  runlist_from_time_bins.C  runlist_from_time_bins.sh  spectral_analysis.C  spectral_analysis.sh  spectral_analysis_config.txt  spectral_plotting.sh  spectral_plotting_config.txt
examples/: binary_lightcurve_plotting.yml  reflected_region.yml  run_selection.yml
tests/unit_tests/: test_bti.py
v2dl5/: analysis.py  binaries.py  bti.py  configuration.py  data.py  orbital_phase.py  plot.py  run_lists.py  sky_regions.py  target.py  time.py  version.py
v2dl5/light_curves/: binary_plotting.py  data_reader.py  orbital_period.py
v2dl5/plotting/: utilities.py
v2dl5/scripts/: 1D_reflected_region.py  1d_reflected_region.py  add_spectral_fits_to_light_curve_table.py  generate_run_list.py  generate_run_lists_for_significant_points.py  generate_run_lists_from_target_list.py  generate_runlist.py  generate_runlists_from_target_list.py  grouped_time_bins.py  nightly_time_bins.py  plot_binary_light_curves.py  print_simplified_light_curve.py  reflected_region_analysis.py  split_binary_run_list.py
