[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=["v2dl5"]

[tool.setuptools_scm]
write_to = "v2dl5/_version.py"

[project]
name = "v2dl5"
dynamic = ["version"]
description = "High-level analysis for VERITAS with gammapy"
readme = "README.md"
license = { file="LICENSE" }
authors = [
  { name="Gernot Maier", email="gernot.maier@desy.de" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.9"
dependencies = [
    "astropy",
    "astroquery",
    "gammapy",
    "Ipython",
    "pydantic<2",
]

[project.optional-dependencies]
"tests" = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[project.urls]
"repository" = "https://github.com/GernotMaier/V2DL5"
"bug tracker" = "https://github.com/GernotMaier/V2DL5/issues"

[project.scripts]
v2dl5-reflected-region-analysis = "v2dl5.scripts.reflected_region_analysis:main"

[tool.pytest.ini_options]
minversion="6.0"
norecursedirs=["build", "docs/_build"]
addopts="-v"
testpaths="v2dl5/tests/"

[tool.black]
line_length = 100

[tool.isort]
profile = "black"
filter_files = true
